# Human-Detector-and-Tracker

./: .coveralls.yml  .travis.yml  CMakeLists.txt  Doxyfile  MId term proposal ENPM08X.docx  README.md  dependencies.sh  static_code_analysis_check.sh
UML/revised/: revised_ClassDiagram_v2
app/: CMakeLists.txt  HumanClassifier.cpp  HumanDetector.cpp  PerceptionModule.cpp  ReadData.cpp  RectsandConfidences.cpp  Transformation.cpp  main.cpp
app/app/: PerceptionModule.cpp
coverage/: index-sort-f.html  index-sort-l.html  index.html
coverage/app/: HumanClassifier.cpp.func-sort-c.html  HumanClassifier.cpp.func.html  HumanClassifier.cpp.gcov.html  HumanDetector.cpp.func-sort-c.html  HumanDetector.cpp.func.html  HumanDetector.cpp.gcov.html  PerceptionModule.cpp.func-sort-c.html  PerceptionModule.cpp.func.html  PerceptionModule.cpp.gcov.html  ReadData.cpp.func-sort-c.html  ReadData.cpp.func.html  ReadData.cpp.gcov.html  RectsandConfidences.cpp.func-sort-c.html  RectsandConfidences.cpp.func.html  RectsandConfidences.cpp.gcov.html  Transformation.cpp.func-sort-c.html  Transformation.cpp.func.html  Transformation.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage/include/: PerceptionModule.hpp.func-sort-c.html  PerceptionModule.hpp.func.html  PerceptionModule.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage/test/: index-sort-f.html  index-sort-l.html  index.html  main.cpp.func-sort-c.html  main.cpp.func.html  main.cpp.gcov.html  test.cpp.func-sort-c.html  test.cpp.func.html  test.cpp.gcov.html  test_HumanClassifier.cpp.func-sort-c.html  test_HumanClassifier.cpp.func.html  test_HumanClassifier.cpp.gcov.html  test_HumanDetector.cpp.func-sort-c.html  test_HumanDetector.cpp.func.html  test_HumanDetector.cpp.gcov.html  test_PerceptionModule.cpp.func-sort-c.html  test_PerceptionModule.cpp.func.html  test_PerceptionModule.cpp.gcov.html  test_ReadData.cpp.func-sort-c.html  test_ReadData.cpp.func.html  test_ReadData.cpp.gcov.html  test_RectsandConfidences.cpp.func-sort-c.html  test_RectsandConfidences.cpp.func.html  test_RectsandConfidences.cpp.gcov.html  test_Transformation.cpp.func-sort-c.html  test_Transformation.cpp.func.html  test_Transformation.cpp.gcov.html
docs/html/: _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _human_classifier_8cpp.html  _human_classifier_8cpp__incl.map  _human_classifier_8cpp__incl.md5  _human_classifier_8cpp_source.html  _human_classifier_8hpp.html  _human_classifier_8hpp__dep__incl.map  _human_classifier_8hpp__dep__incl.md5  _human_classifier_8hpp__incl.map  _human_classifier_8hpp__incl.md5  _human_classifier_8hpp_source.html  _human_detector_8cpp.html  _human_detector_8cpp__incl.map  _human_detector_8cpp__incl.md5  _human_detector_8cpp_source.html  _human_detector_8hpp.html  _human_detector_8hpp__dep__incl.map  _human_detector_8hpp__dep__incl.md5  (+137 more)
include/: CMakeLists.txt  HumanClassifier.hpp  HumanDetector.hpp  PerceptionModule.hpp  ReadData.hpp  RectandConfidence.hpp  RectsandConfidences.hpp  Transformation.hpp  detector.hpp  lib.hpp  perceptionmodule.hpp
results/: cppcheck  cppcheck.txt  cpplint.txt  valgrind_result.txt
test/: CMakeLists.txt  main.cpp  tempCodeRunnerFile.cpp  test.cpp  test_HumanClassifier.cpp  test_HumanDetector.cpp  test_PerceptionModule.cpp  test_ReadData.cpp  test_RectsandConfidences.cpp  test_Transformation.cpp
(+30 files in other folders)
